# spec-kit-multiagent-lite

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  installer.ps1  pyproject.toml
.claude/: CLAUDE.md
.claude/commands/: pr.md  review.md  sync.md
.github/: copilot-instructions.md
.github/prompts/: audit.prompt.md  commit.prompt.md  orient.prompt.md  pr.prompt.md  review.prompt.md  sync.prompt.md
.github/workflows/: enforce-git-workflow.yml
.specify/memory/: pr-workflow-guide.md
.specify/templates/: collaboration-README.md  handoff.md  plan-template.md  session-log.md
docs/: GUIDE.md  manifest-schema.md
docs/research/: claude-code-enhancement-research.md
docs/temp/: PHASE-1-AUDIT.md  WORKFLOW-PATHWAYS.md  human-validation-v0.2-results.md  installer-design-v2.md  installer-functional-design.md  kit-implementation-status.md  kit-merge-implementation-plan.md  manifest-system-summary.md  new-installer-features.md  wishlist-prioritized.md
docs/validation/: v0.1.0-mvp-audit.md  v0.2.0-ux-validation.md  v0.3.0-command-audit.md  v0.3.0-dependency-audit.md  v0.3.0-validation.md
docs/vanilla-reference/: README.md  UPSTREAM.md
docs/vanilla-reference/github-cli-vanilla/.github/: copilot-instructions.md
docs/wip/: copilot-tasks-v0.3.md  v0.3-release-plan.md  wishlist-prioritized.md
examples/: README.md
examples/blog-with-auth/: README.md
examples/minimal-todo-app/: README.md
spec-kits/claude-code-vanilla/.claude/: CLAUDE.md
specs/001-complete-project-kit/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-complete-project-kit/contracts/: audit-command.md  review-command.md  stats-command.md
src/lite_kits/: __init__.py  banner.py  cli.py  installer.py
src/lite_kits/core/: __init__.py  banner.py  conflict_checker.py  detector.py  installer.py  installer_old.py  installer_v2.py  manifest.py  validator.py
src/lite_kits/kits/: README.md  kits.yaml
src/lite_kits/kits/dev/: README.md
src/lite_kits/kits/dev/claude/commands/: orient.md
src/lite_kits/kits/dev/commands/.claude/: audit.md  cleanup.md  commit.md  orient.md  pr.md
src/lite_kits/kits/dev/commands/.github/: cleanup.prompt.md  commit.prompt.md  orient.prompt.md  pr.prompt.md  review.prompt.md  stats.prompt.md
src/lite_kits/kits/git/: README.md
src/lite_kits/kits/git/claude/commands/: review.md
src/lite_kits/kits/git/github/prompts/: cleanup.prompt.md
src/lite_kits/kits/git/scripts/bash/: get-git-context.sh
src/lite_kits/kits/multiagent/: README.md
src/lite_kits/kits/multiagent/commands/.github/: sync.prompt.md
src/lite_kits/kits/multiagent/memory/: git-worktrees-protocol.md  pr-workflow-guide.md
src/lite_kits/kits/multiagent/templates/: decision.md
src/lite_kits/kits/project/: README.md
src/lite_kits/kits/project/claude/commands/: orient.md  stats.md
src/lite_kits/kits/project/github/prompts/: orient.prompt.md
src/speckit_multiagent/: __init__.py  cli.py  installer.py
src/speckit_multiagent/kits/: README.md
src/speckit_multiagent/kits/git/: README.md
src/speckit_multiagent/kits/git/claude/commands/: cleanup.md  commit.md  pr.md
src/speckit_multiagent/kits/git/github/prompts/: cleanup.prompt.md  commit.prompt.md  (+1 more)
src/speckit_multiagent/kits/multiagent/: README.md
src/speckit_multiagent/kits/multiagent/memory/: git-worktrees-protocol.md  parallel-work-protocol.md
src/speckit_multiagent/kits/project/: README.md
src/speckit_multiagent/templates/commands/: orient.md
src/speckit_multiagent/templates/memory/: pr-workflow-guide.md
(+4 files in other folders)
