[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spec-kit-multiagent"
version = "0.1.0"
description = "Lightweight multi-agent coordination add-on for GitHub spec-kit"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "spec-kit-multiagent contributors" }
]
keywords = ["spec-kit", "multiagent", "ai", "coordination", "development-workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
speckit-ma = "speckit_multiagent.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/spec-kit-multiagent-lite"
Documentation = "https://github.com/yourusername/spec-kit-multiagent-lite#readme"
Repository = "https://github.com/yourusername/spec-kit-multiagent-lite"
Issues = "https://github.com/yourusername/spec-kit-multiagent-lite/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/speckit_multiagent"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
